2014-01-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.11

	* R/inline.R: For now, revert to using Rcpp:::Rcpp.plugin.maker() as
	only unreleased Rcpp exports this right now; will use '::' later

2014-01-15  Dirk Eddelbuettel  <edd@debian.org>

	* src/utils.cpp: Make the epoch-offset between QL and R an internal
	const here, rather than accessing it from R's Date class

	* DESCRIPTION: Update Depends and Imports relationships

	* R/inline.R: Call Rcpp::LdFlags() now that it is exported
	* R/inline.R: Idem for Rcpp::Rcpp.plugin.maker()

	* man/AsianOption.Rd: Indent to less that 90 columns
	* man/BinaryOption.Rd: Idem
	* man/BondUtilities.Rd: Idem
 	* man/Calendars.Rd: Idem
	* man/EuropeanOptionArrays.Rd: Idem
	* man/FixedRateBond.Rd: Idem
	* man/ImpliedVolatility.Rd: Idem

	* R/mod.R: Do not attempt to load modules for now

2013-05-26  Dirk Eddelbuettel  <edd@debian.org>

	* R/inline.R: Adding a plugin for use by Rcpp attribute or inline

	* inst/include/rquantlib.h: Moved from src/ to expose the RQuantLib
	API for use by the plugin (and the header file / API needs to be
	properly defined; this file is probably too large)

	* src/Makevars.in: Adjust for header file move
	* src/Makevars.win: Idem

2013-02-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.10

	* man/Bond.Rd: Use a flat discount curve in example
	* man/DiscountCurve.Rd: Idem
	* man/FixedRateBond.Rd: Idem
	* man/FLoatingRateBond.Rd: Idem
	* man/ZeroCouponBond.Rd: Idem

	* R/arrays.R (plotOptionSurface): Use explicit `rgl::' prefix for all
	functions from the rgl package to suppress spurious codetools warning

	* demo/OptionSurfaces.R: Reindented

	* cleanup: Simplified and updated

2012-12-02  Dirk Eddelbuettel  <edd@debian.org>

	* src/discount.cpp (DiscountCurve): R-devel on Windows now longer
	likes a data.frame instantiation here, so passing back as list and ...
	* R/discount.R (DiscountCurve.default): ... making it a data.frame here.
